fix covered tooltip,  grid misalignments

--- a/frontend/src/UserView/ToggleButtonsUpDown.css
+++ b/frontend/src/UserView/ToggleButtonsUpDown.css
@@ -4,7 +4,7 @@
 }
 
 #dissentup-button span, #dissentdown-button span {
-    width: 30px;
-    height: 30px;
-    font-size: 30px
+    width: 35px;
+    height: 35px;
+    font-size: 35px
 }
